--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mammoth": "^1.11.0",
     "next-themes": "^0.3.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.530",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
